@@ -6,7 +6,7 @@
 	#include "../src/StopPow_LP.h"
 	#include "../src/StopPow_BetheBloch.h"
 	#include "../src/StopPow_AZ.h"
-	#include "../src/StopPow_Melhorn.h"
+	#include "../src/StopPow_Mehlhorn.h"
 	#include "../src/AtomicData.h"
 	#include "../src/PlotGen.h"
 %}
@@ -74,6 +74,6 @@ public:
 %include "../src/StopPow_LP.h"
 %include "../src/StopPow_BetheBloch.h"
 %include "../src/StopPow_AZ.h"
-%include "../src/StopPow_Melhorn.h"
+%include "../src/StopPow_Mehlhorn.h"
 %include "../src/AtomicData.h"
 %include "../src/PlotGen.h"
