@@ -23,7 +23,7 @@ from distutils.core import setup, Extension
 
 
 StopPow_module = Extension('_StopPow',
-                            sources=['StopPow_wrap.cxx', '../src/StopPow.cpp', '../src/StopPow_SRIM.cpp', '../src/StopPow_BetheBloch.cpp', '../src/StopPow_LP.cpp', '../src/StopPow_AZ.cpp','../src/StopPow_Melhorn.cpp','../src/AtomicData.cpp','../src/PlotGen.cpp'],
+                            sources=['StopPow_wrap.cxx', '../src/StopPow.cpp', '../src/StopPow_SRIM.cpp', '../src/StopPow_BetheBloch.cpp', '../src/StopPow_LP.cpp', '../src/StopPow_AZ.cpp','../src/StopPow_Mehlhorn.cpp','../src/AtomicData.cpp','../src/PlotGen.cpp'],
                             extra_compile_args = cargs,
                             extra_link_args = largs,
                             language="c++" )
@@ -33,5 +33,5 @@ setup (name = 'StopPow',
        author      = "Alex Zylstra",
        description = """Stopping power library""",
        ext_modules = [StopPow_module],
-       py_modules = ["StopPow","StopPow_SRIM","StopPow_BetheBloch","StopPow_LP","StopPow_AZ","StopPow_Melhorn","AtomicData","PlotGen"],
+       py_modules = ["StopPow","StopPow_SRIM","StopPow_BetheBloch","StopPow_LP","StopPow_AZ","StopPow_Mehlhorn","AtomicData","PlotGen"],
        )
